--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "@prisma/client": "^2.23.0",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "prisma": "^2.23.0"
   }
 }
