--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@prisma/client": "^2.23.0",
-    "next": "10.2.0",
+    "axios": "^0.21.1",
+    "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive": "^8.2.0",
+    "react-select": "^4.3.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
