--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@prisma/client": "^2.23.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "lodash": "^4.17.21",
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
