--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.12.2",
     "react-hot-toast": "^2.1.0",
+    "react-query": "^3.32.1",
     "react-responsive": "^8.2.0",
     "react-select": "^4.3.1",
     "styled-components": "^5.3.0"
